--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -565,7 +565,9 @@ Bugs
 
   - When a code fails with `fatal`, the stacked `finally` blocks should not run.
 
-
+  - Currently, set-max-heap-size calls mark-compact directly. This means that if this
+    function is called from the interpreter, it will run the garbage collector in the interpreter.
+    Make set-max-heap-size a primitive instead.
 
 Checks
   - Check for overflow for integer operations.
