--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -639,6 +639,23 @@ Bugs
 
     f(3, 7)
 
+  - The following launch:
+  
+      jstanza repl tests/stable-refs -flags TESTING
+
+    prints the erroneous message:
+
+      Invalid call to the 'run' command. -flags is not a supported flag.
+
+      USAGE OF COMMAND 'run':
+
+        Run the tests using the Stanza testing framework.
+
+  - The following prints out `true` when compiled which is wrong. It prints `false` in the REPL.
+  
+    val a = DOUBLE-NAN
+    println(a < 0.0)   
+
 
 Checks
   - Check for overflow for integer operations.
